crates/aranya-policy-compiler/tests/data/match_expr/result_redundant_binding_after_literal.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: unreachable match arm
  |
3 |         Ok(n) | Ok(5) => n
  |                 ^^^^^
